# supervice

./: .gitignore  README.md  audit-2026-07-23.md  bugreport.md  pyproject.toml  supervisord.conf  test_config.conf  test_loop.py
docs/: api.md  architecture.md  changelog.md  cli.md  conf.py  configuration.md  contributing.md  healthchecks.md  index.md  installation.md  make.bat  quickstart.md
supervice/: __init__.py  client.py  config.py  core.py  events.py  health.py  logger.py  main.py  models.py  process.py  rpc.py
tests/: test_audit_regressions.py  test_config.py  test_core.py  test_health.py  test_logger.py  test_process.py  test_rpc_protocol.py  test_security.py  test_validation.py
