[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supervice"
version = "0.1.0"
description = "A modern, async process supervisor for Unix-like systems. Zero dependencies."
license = "Apache-2.0"
authors = [
    { name = "Farshid Ashouri" },
]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "supervisor",
    "process-manager",
    "daemon",
    "asyncio",
    "process-control",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Boot",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "furo>=2024.0",
    "myst-parser>=3.0",
    "sphinx-copybutton>=0.5",
]
dev = [
    "mypy>=1.0",
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Documentation = "https://supervice.readthedocs.io"
Repository = "https://github.com/rodmena-limited/supervice"
Issues = "https://github.com/rodmena-limited/supervice/issues"
Changelog = "https://supervice.readthedocs.io/en/latest/changelog.html"

[project.scripts]
supervice = "supervice.main:main"
supervicectl = "supervice.client:main"

[tool.setuptools.packages.find]
include = ["supervice*"]

[tool.setuptools.package-data]
supervice = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["UP031"]

[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
